Change css name style

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -55,7 +55,7 @@
                     <div style="display: flex; height: 110px; align-items: center;">
                         <h2 style="color: white; font-size: 30px; margin-left: 20px; margin-right: 20px;">AlgoTech</h2>
                         <p style="color: white; margin-top: 10px;">Pajisuni me kompjuterin më të mirë</p>
-                        <input type="text" style="margin-left: 355px; border-radius: 0px;" class="footerButton" name="search" placeholder="Kërkoni këtu...">
+                        <input type="text" style="margin-left: 355px; border-radius: 0px;" class="text-button" name="search" placeholder="Kërkoni këtu...">
                         <input type="button" value="Search" class="search-btn" name="submit-search-btn" style="margin-right: 20;">
                     </div>
                     <div style="width: 960px; height: 340px; background-color: #3f3f3f; margin-left: 20px;">
@@ -89,7 +89,7 @@
                     <p style="font-size: 30px;">RRETH NESH</p>
                     <hr size="1" width="100%" color="orange">
                     <div style="padding: 20px;">
-                        <p>AlgoTech, Inc., është kompani amerikane, e themeluar në SHBA. AlgoTech është platformë e përmbajtjes me video dhe studio të produksionit dhe kompani lidere e shitjes online; AlgoTech udhëheq me shërbime të internetit offline në online në Ballkan dhe Diasporën Shqiptare. 
+                        <p style="color: #3f3f3f;">AlgoTech, Inc., është kompani amerikane, e themeluar në SHBA. AlgoTech është platformë e përmbajtjes me video dhe studio të produksionit dhe kompani lidere e shitjes online; AlgoTech udhëheq me shërbime të internetit offline në online në Ballkan dhe Diasporën Shqiptare. 
                             AlgoTech, Inc., është kompania me rritjen më të shpejtë në Ballkan që ofron shërbime të internetit dhe një nga start-ups me investimin më të madh VC nga investitorë me reputacion në Evropë. 
                             AlgoTech është cilësuar në pozitën e 11 në listën‘Deloitte Technology Fast 50 ranking’ për Europën qendrore dhe në pozitën e parë në regjion, me rritje 1,500% në katër vitet e fundit.
                             Vizioni ynë është të ndërtojmë ekonominë e internetit në Ballkan, duke u fokusuar në shërbime kryesore që mungojnë në regjion, për një treg prej rreth 12 milion banorë.</p>
@@ -136,8 +136,8 @@
                     <div style="width: 225px; margin-right: 20px;">
                         <p class="headParagraph">MERRNI NJOFTIMET TONA</p>
                         <form action="#" method="post">
-                            <input type="text" placeholder=" Emri:" class="footerButton">
-                            <input type="email" name="" id="" placeholder=" Email:" class="footerButton" style="margin-top: 15px;">
+                            <input type="text" placeholder=" Emri:" class="text-button">
+                            <input type="email" name="" id="" placeholder=" Email:" class="text-button" style="margin-top: 15px;">
                             <input type="submit" value="SUBMIT" class="footerSubmitButton">
                         </form>
                     </div>
