--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
                     <div style="display: flex; height: 110px; align-items: center;">
                         <h2 style="color: white; font-size: 30px; margin-left: 20px; margin-right: 20px;">AlgoTech</h2>
                         <p style="color: white; margin-top: 10px;">Pajisuni me kompjuterin më të mirë</p>
-                        <input type="text" style="margin-left: 260px; border-radius: 0px;" class="footerButton" name="search" placeholder="Kërkoni këtu...">
+                        <input type="text" style="margin-left: 260px; border-radius: 0px;" class="text-button" name="search" placeholder="Kërkoni këtu...">
                         <input type="button" value="Search" class="search-btn" name="submit-search-btn">
                     </div>
                     <div style="width: 960px; height: auto; background-color: #3f3f3f; margin-left: 20px; padding-bottom: 50px;">
@@ -68,11 +68,11 @@
                                         <form action="#" method="post" style="margin-top: 400x;">
                                             <p style="margin-left: 185px;">KYÇUNI</p>
                                             <div style="margin: 40px;">
-                                                <!-- <p style="font-size: 18px;">Emri i perdoruesit :<input type="text" placeholder=" Username" class="footerButton" background style="width: 200px; margin-left: 20px; background-color: aliceblue;"></p> -->
-                                                <label for="username" style="display: table-cell; color:#868686;">Emri i perdoruesit: <input type="text" placeholder=" Username" class="footerButton" background style="width: 200px; ; background-color: aliceblue; margin-left: 20px;"> </label>
+                                                <!-- <p style="font-size: 18px;">Emri i perdoruesit :<input type="text" placeholder=" Username" class="text-button" background style="width: 200px; margin-left: 20px; background-color: aliceblue;"></p> -->
+                                                <label for="username" style="display: table-cell; color:#868686;">Emri i perdoruesit: <input type="text" placeholder=" Username" class="text-button" background style="width: 200px; ; background-color: aliceblue; margin-left: 20px;"> </label>
                                             <div >
-                                                <label for="username" style="display: table-cell; color:#868686;">Fjalkalimi: <input type="password" placeholder=" Pasword" minlength="8" required class="footerButton" background style="width: 200px;  background-color: aliceblue; margin-left: 80px;"> </label>
-                                                <!-- <p style="font-size: 18px;">Fjalkalimi :<input type="password" placeholder=" Pasword" minlength="8" required class="footerButton" background style="width: 200px; margin-left: 85px; background-color: aliceblue;"></p> -->
+                                                <label for="username" style="display: table-cell; color:#868686;">Fjalkalimi: <input type="password" placeholder=" Pasword" minlength="8" required class="text-button" background style="width: 200px;  background-color: aliceblue; margin-left: 80px;"> </label>
+                                                <!-- <p style="font-size: 18px;">Fjalkalimi :<input type="password" placeholder=" Pasword" minlength="8" required class="text-button" background style="width: 200px; margin-left: 85px; background-color: aliceblue;"></p> -->
                                             </div>
                                             <input type="submit" value="Kyçuni" class="Login-btn" style="margin-left: 280px; ">
                                         </form>
@@ -115,8 +115,8 @@
                     <div style="width: 225px; margin-right: 20px;">
                         <p class="headParagraph">MERRNI NJOFTIMET TONA</p>
                         <form action="#" method="post">
-                            <input type="text" placeholder=" Emri:" class="footerButton">
-                            <input type="email" name="" id="" placeholder=" Email:" class="footerButton" style="margin-top: 15px;">
+                            <input type="text" placeholder=" Emri:" class="text-button">
+                            <input type="email" name="" id="" placeholder=" Email:" class="text-button" style="margin-top: 15px;">
                             <input type="submit" value="SUBMIT" class="footerSubmitButton">
                         </form>
                     </div>
