--- a/product.html
+++ b/product.html
@@ -53,7 +53,7 @@
                     <div style="display: flex; height: 110px; align-items: center;">
                         <h2 style="color: white; font-size: 30px; margin-left: 20px; margin-right: 20px;">AlgoTech</h2>
                         <p style="color: white; margin-top: 10px;">Pajisuni me kompjuterin më të mirë</p>
-                        <input type="text" style="margin-left: 355px; border-radius: 0px;" class="footerButton" name="search" placeholder="Kërkoni këtu...">
+                        <input type="text" style="margin-left: 355px; border-radius: 0px;" class="text-button" name="search" placeholder="Kërkoni këtu...">
                         <input type="button" value="Search" class="search-btn" name="submit-search-btn" style="margin-right: 20;">
                     </div>
                     <div style="width: 960px; height: 340px; background-color: #3f3f3f; margin-left: 20px;">
@@ -180,8 +180,8 @@
                     <div style="width: 225px; margin-right: 20px;">
                         <p class="headParagraph">MERRNI NJOFTIMET TONA</p>
                         <form action="#" method="post">
-                            <input type="text" placeholder=" Emri:" class="footerButton">
-                            <input type="email" name="" id="" placeholder=" Email:" class="footerButton" style="margin-top: 15px;">
+                            <input type="text" placeholder=" Emri:" class="text-button">
+                            <input type="email" name="" id="" placeholder=" Email:" class="text-button" style="margin-top: 15px;">
                             <input type="submit" value="SUBMIT" class="footerSubmitButton">
                         </form>
                     </div>
