--- a/signup.html
+++ b/signup.html
@@ -53,7 +53,7 @@
                     <div style="display: flex; height: 110px; align-items: center;">
                         <h2>AlgoTech</h2>
                         <p>Pajisuni me kompjuterin më të mirë</p>
-                        <input type="text" style="margin-left: 260px; border-radius: 0px;" class="footerButton" name="search" placeholder="Kërkoni këtu...">
+                        <input type="text" style="margin-left: 260px; border-radius: 0px;" class="text-button" name="search" placeholder="Kërkoni këtu...">
                         <input type="button" value="Search" class="search-btn" name="submit-search-btn">
                     </div>
                     <div style="width: 960px; height: auto; background-color: #3f3f3f; margin-left: 20px;">
@@ -69,26 +69,26 @@
                                         <form action="#" method="post" >
                                             <p style="padding-left: 140px;">REGJISTROHUNI</p>
                                             <div >
-                                                <label for="username" style="display: table-cell; color:#868686;">Emri : <input type="text" placeholder=" Name" class="footerButton" background style="width: 200px; ; background-color: aliceblue; margin-left: 170px;"> </label>
+                                                <label for="username" style="display: table-cell; color:#868686;">Emri : <input type="text" placeholder=" Name" class="text-button" background style="width: 200px; ; background-color: aliceblue; margin-left: 170px;"> </label>
                                             </div>
                                             <div >
-                                                <label for="username" style="display: table-cell; color:#868686;">Mbiemri: <input type="text" placeholder=" Surname" class="footerButton" background style="width: 200px; ; background-color: aliceblue; margin-left: 150px;"> </label>
+                                                <label for="username" style="display: table-cell; color:#868686;">Mbiemri: <input type="text" placeholder=" Surname" class="text-button" background style="width: 200px; ; background-color: aliceblue; margin-left: 150px;"> </label>
                                             </div>
                                             <div >
-                                                <label for="username" style="display: table-cell; color:#868686;">Emaili: <input type="email" placeholder=" Email" class="footerButton" background style="width: 200px; ; background-color: aliceblue; margin-left: 169px;"> </label>
+                                                <label for="username" style="display: table-cell; color:#868686;">Emaili: <input type="email" placeholder=" Email" class="text-button" background style="width: 200px; ; background-color: aliceblue; margin-left: 169px;"> </label>
                                             </div>
                                             <div>
-                                                <label for="username" style="display: table-cell; color:#868686;">Emri i perdoruesit: <input type="text" placeholder=" Username" class="footerButton" background style="width: 200px; ; background-color: aliceblue; margin-left: 80px;"> </label>
+                                                <label for="username" style="display: table-cell; color:#868686;">Emri i perdoruesit: <input type="text" placeholder=" Username" class="text-button" background style="width: 200px; ; background-color: aliceblue; margin-left: 80px;"> </label>
                                             </div>
                                             <div >
-                                                <label for="username" style="display: table-cell; color:#868686;">Fjalekalimi: <input type="password" placeholder=" Pasword" class="footerButton" background style="width: 200px; ; background-color: aliceblue; margin-left: 135px;"> </label>
+                                                <label for="username" style="display: table-cell; color:#868686;">Fjalekalimi: <input type="password" placeholder=" Pasword" class="text-button" background style="width: 200px; ; background-color: aliceblue; margin-left: 135px;"> </label>
                                             </div>
                                             <div >
-                                                <label for="username" style="display: table-cell; color:#868686;">Shtyp perseri fjalekalimin : <input type="password" placeholder=" Pasword" class="footerButton" background style="width: 200px; ; background-color: aliceblue; margin-left: 20px;"> </label>
+                                                <label for="username" style="display: table-cell; color:#868686;">Shtyp perseri fjalekalimin : <input type="password" placeholder=" Pasword" class="text-button" background style="width: 200px; ; background-color: aliceblue; margin-left: 20px;"> </label>
                                             </div>
                                             
                                             <div >
-                                                <label for="username" style="display: table-cell; color:#868686;">Data e lindjes: <input type="date" placeholder=" Username" class="footerButton" background style="width: 200px; ; background-color: aliceblue; margin-left: 119px;"> </label>
+                                                <label for="username" style="display: table-cell; color:#868686;">Data e lindjes: <input type="date" placeholder=" Username" class="text-button" background style="width: 200px; ; background-color: aliceblue; margin-left: 119px;"> </label>
                                             </div>
                                             <div style=" margin-left: 70px;" >
                                                 <p style="font-size: 18px;">Gjinia :
@@ -143,8 +143,8 @@
                     <div style="width: 225px; margin-right: 20px;">
                         <p class="headParagraph">MERRNI NJOFTIMET TONA</p>
                         <form action="#" method="post">
-                            <input type="text" placeholder=" Emri:" class="footerButton">
-                            <input type="email" name="" id="" placeholder=" Email:" class="footerButton" style="margin-top: 15px;">
+                            <input type="text" placeholder=" Emri:" class="text-button">
+                            <input type="email" name="" id="" placeholder=" Email:" class="text-button" style="margin-top: 15px;">
                             <input type="submit" value="SUBMIT" class="footerSubmitButton">
                         </form>
                     </div>
