--- a/login.html
+++ b/login.html
@@ -59,6 +59,22 @@
                         <br>
                         <br>
                         <div style="margin-left: 50px;" >
+                            <form action="" style="padding: 20px;">
+                                <svg height="130" width="500">
+                                    <defs>
+                                      <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
+                                        <stop offset="0%"
+                                        style="stop-color:rgb(255,255,0);stop-opacity:1" />
+                                        <stop offset="100%"
+                                        style="stop-color:rgb(255,0,0);stop-opacity:1" />
+                                      </linearGradient>
+                                    </defs>
+                                    <ellipse cx="100" cy="70" rx="85" ry="55" fill="url(#grad1)" />
+                                    <text fill="#ffffff" font-size="35" font-family="Georgia"
+                                    x="30" y="86">AlgoTech</text>
+                                  Sorry, your browser does not support inline SVG.
+                                  </svg>
+                                </form>
                             <table>
                                 <tr>
                                     <td>
