--- a/product.html
+++ b/product.html
@@ -89,7 +89,7 @@
                         <p style="font-size: 20px; font-family: Georgia, 'Times New Roman', Times, serif; margin-left: 240px;">Produkti : Laptop Apple MacBook Pro 16 Touch Bar</p>
                         <table style="margin: 20px;">
                         <tr>
-                            <td><img src="images/0.jpg" alt="mac_book-image" width="300px" style="margin: 20px;"></td>
+                            <td><img id="foto-product-one" src="images/0.jpg" alt="mac_book-image" width="300px" style="margin: 20px;"></td>
                             <td>
                                 <p>Specifikat :</p>
                                 <ol>
@@ -116,16 +116,16 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><img src="images/1.jpg" alt="mac_book-image" width="300px" style="margin: 20px;"></td>
+                            <td><img id="foto-product-two" src="images/1.jpg" alt="mac_book-image" width="300px" style="margin: 20px;"></td>
                             <td rowspan="2"><p>Detajet teknike:</p>
-                                <div class="product-table">
+                                <div style="resize:both; overflow:auto;" class="product-table">
                                     <table  style="border: 1px solid black; width: 500px;" cellspacing="10" cellspacing="5">
                                         <tr>
                                             <th style="background-color: #fe9900;padding: 5px;">Pershkrimi</td>
                                             <th style="background-color: #fe9900; padding: 5px;">Rezultati</td>
                                         </tr>
                                         <tr> <td>Bluetooth</td><td>PO</td></tr>
-                                        <tr> <td>Diagonalja e ekranit</td><td>16"/td></tr>
+                                        <tr> <td>Diagonalja e ekranit</td><td>16"</td></tr>
                                         <tr> <td>Drive optik</td><td>Jo, caktohet përmes tastit RGB</td></tr>
                                         <tr> <td>Jetëgjatësia maksimale e baterisë h</td><td>11</td></tr>
                                         <tr> <td>Kapaciteti i memories GB</td><td>16</td></tr>
@@ -143,7 +143,7 @@
                                
                         </tr>
                         <tr>
-                            <td><img src="images/2.jpg" alt="mac_book-image" width="300px" style="margin: 20px;"></td>
+                            <td><img id="foto-three-product" src="images/2.jpg" alt="mac_book-image" width="300px" style="margin: 20px;"></td>
                         </tr>
                     </table></div>
                 </div>
