--- a/products.html
+++ b/products.html
@@ -92,7 +92,8 @@
                                     <img src="images/Computer0.jpg" width="270"  alt="kompjuter" style="margin-bottom: 10px; ">
                                     <p style="margin-bottom: 10px;">Laptop Lenovo IdeaPad 5 14IIL05, 14'', Intel Core i7, 16GB RAM, 1TB SSD, Intel Iris Plus Graphics, i hirtë</p>
                                     <a href="#"> Shikoni më shumë</a>
-                                </td><td style="width: 200px; padding-right: 20px;">
+                                </td>
+                                <td style="width: 200px; padding-right: 20px;">
                                     <img src="images/0.jpg" width="270"  alt="kompjuter" style="margin-bottom: 10px;">
                                     <p style="margin-bottom: 10px;">Laptop Apple MacBook Pro 16 Touch Bar, 16'', Intel Core i7, 16GB RAM, 512GB SSD, AMD Radeon Pro 5500M, i hirtë</p>
                                     <a href="#"> Shikoni më shumë</a>
@@ -108,8 +109,9 @@
                                     <img src="images/Mnitori.jpg" width="270"  alt="kompjuter" style="margin-bottom: 10px;">
                                     <p style="margin-bottom: 10px;">Monitor Samsung LC49HG90DMUXEN, 49", 144Hz, hirtë, zi</p>
                                     <a href="#"> Shikoni më shumë</a>
-                                </td><td style="width: 200px; padding-right: 20px;">
-                                    <img src="images/Karrige0.jpg" width="80px"  alt="kompjuter" style="margin-bottom: 10px; margin-left: 90px;">
+                                </td>
+                                <td style="width: 200px; padding-right: 20px;">
+                                    <img id="foto-product-three" src="images/Karrige0.jpg" width="80px"  alt="kompjuter" style="margin-bottom: 10px; margin-left: 90px;">
                                     <p style="margin-bottom: 10px;">Karrige Nitro Concepts E250, gaming, e zezë/kuqe</p>
                                     <a href="#"> Shikoni më shumë</a>
                                 </td>
@@ -121,16 +123,17 @@
                             </tr>
                             <tr>
                                 <td style="width: 200px; padding-right: 20px;">
-                                    <img src="images/Tastatur.jpg" width="270"  alt="tastatur" style="margin-bottom: 10px;">
+                                    <img id="tastiera" src="images/Tastatur.jpg" width="270"  alt="tastatur" style="margin-bottom: 10px;">
                                     <p style="margin-bottom: 10px;">Tastierë CONNECT IT CI-1129, e zezë</p>
                                     <a href="#"> Shikoni më shumë</a>
-                                </td><td style="width: 200px; padding-right: 20px;">
-                                    <img src="images/Ore.jpg" width="200"  alt="ore" style="margin-bottom: 10px;margin-left: 30px;">
+                                </td>
+                                <td  style="width: 200px; padding-right: 20px;">
+                                    <img id="ora-dy-e-nates" src="images/Ore.jpg" width="200"  alt="ore" style="margin-bottom: 10px;margin-left: 30px;">
                                     <p style="margin-bottom: 10px;">Orë smart GARMIN Vívoactive 4, e argjendtë/hirtë</p>
                                     <a href="#"> Shikoni më shumë</a>
                                 </td>
-                                <td style="width: 200px; padding-right: 20px;">
-                                    <img src="images/shtepize.jpg" width="170"  alt="shtepize" style="margin-bottom: 10px;">
+                                <td  style="width: 200px; padding-right: 20px;">
+                                    <img id="shtepiza" src="images/shtepize.jpg" width="170"  alt="shtepize" style="margin-bottom: 10px;">
                                     <p style="margin-bottom: 10px;">Kompjuter CZC PC Knight GC114, Intel Core i5, 16GB DDR4, 1TB SSM, ASUS ROG-STRIX-GTX1660S-O6G</p>
                                     <a href="#"> Shikoni më shumë</a>
                                 </td>
