--- a/home_page.html
+++ b/home_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="demo.appcache">
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/reset.css" type="text/css">
@@ -95,7 +95,7 @@
                                 <p style="margin-left: 30px;">Ju jeni në &nbsp; >> &nbsp; <a id="a-here" href="home_page.html"> HOMEPAGE</a></p>
                             </div>
                             <div>
-                                <h1 class="welcome-title"> MIRË SE VINI NË ALGGOTECH</h1>
+                                <h1 class="welcome-title"> MIRË SE VINI NË ALOTECH</h1>
                                 <p class="description"> <span><b>AlgoTech</b></span> është dyqani më i madh online në Kosovë, Shqipëri dhe rajon për produkte teknologjike, me mbi <span style="font-weight: bold;"> 60.000 </span> produkte nga brendet më të njohura botërore.</p>
                                 <hr class="hr-after-title">
                                 <div class="outer-div">
