--- a/login.html
+++ b/login.html
@@ -83,13 +83,13 @@
                                             </td>
                                             <td>
                                                 <form name="loginForm" method="post" style="margin-top: 400x;" onsubmit="return validateLogInForm()">
-                                                    <p style="margin-left: 185px;">KYÇUNI</p>
+                                                    <p style="margin-left: 185px; color: #868686;">KYÇUNI</p>
                                                     <div style="margin: 40px;">
                                                        <label>Emri i perdoruesit: <input type="text" name="username" placeholder=" Username" class="text-button" style="width: 200px; background-color: aliceblue; margin-left: 20px;">
                                                         <p id="usernameErrorValidation"></p> 
                                                     </label>
                                                     <div >
-                                                        <label>Fjalkalimi: <input type="password" name="password" placeholder=" Pasword" class="text-button" style="width: 200px;  background-color: aliceblue; margin-left: 80px;"> 
+                                                        <label>Fjalkalimi: <input type="password" name="password" placeholder=" Pasword" class="text-button" style="width: 200px;  background-color: aliceblue; margin-left: 85px;"> 
                                                         <p id="passwordErrorValidation"></p>
                                                         </label>
                                                     </div>
